Track frontend/package-lock.json and unblock npm ci on Render
Update .gitignore to allow the frontend lockfile and commit it for deterministic builds.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ yarn.lock
 pnpm-lock.yaml
 package-lock.json
 
+# Allow lockfile for the frontend so Render can use `npm ci`
+!frontend/package-lock.json
+
 # Builds
 build/
 dist/
